--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_ANALYSIS_API_BASE=http://172.105.230.72
+REACT_APP_MUSIC_APP_ID=638abd901bbf6ba1bb99d620
 
 HTPASSWD_PATH=./lovehy2025.htpasswd
