--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-dom": "^19.0.4",
     "axios": "^1.7.9",
     "flat-embed": "^2.4.0",
+    "highcharts": "^12.2.0",
+    "highcharts-react-official": "^3.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
